# diamond-drill

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md
.cargo/: config.toml
benches/: indexing.rs
scripts/: copy-drill-pro-to-d.ps1  setup-usb-drill-pro.ps1
src/: config.rs  lib.rs  main.rs  readonly.rs  spinner.rs
src/badsector/: mod.rs
src/carve/: mod.rs  signatures.rs
src/checkpoint/: mod.rs
src/cli/: easy_mode.rs  interactive.rs  mod.rs
src/core/: engine.rs  index.rs  mod.rs  scanner.rs
src/dedup/: mod.rs
src/export/: mod.rs
src/gui/: app.rs  mod.rs  theme.rs
src/preview/: mod.rs
src/proof/: mod.rs
src/report/: mod.rs
src/swarm/: agents.rs  chunker.rs  embedder.rs  heal.rs  mod.rs  orchestrator.rs  searcher.rs  session.rs
src/tui/: app.rs  file_tree.rs  mod.rs  ui.rs
tests/: dedup_integration.rs  integration_test.rs
